# MultiAgentAssistant

./: .gitignore  README.md
docs/: PLANEJAMENTO.md  (+2 more)
sac_assistant/: .env.example  .gitignore  README.md  pyproject.toml
sac_assistant/eval/: eval_results.csv  golden_set.jsonl  run_eval.py
sac_assistant/knowledge/delivery/: delivery_faq.md  shipping_and_tracking.md  specific_delivery_cases.md
sac_assistant/knowledge/payments/: payment_and_refunds.md  payment_faq.md  specific_payment_cases.md
sac_assistant/knowledge/products/: backpacks.md  catalog.md  chairs.md  chargers.md  compatibility_faq.md  controllers.md  guarantee_and_devolution.md  headsets.md  keyboards.md  mice.md  model_comparisons.md  monitors.md  mousepads.md  ssds.md  usage_and_care.md  usb_hubs.md  webcams.md
sac_assistant/src/sac_assistant/: crew.py  flow.py  main.py  order_service.py  translation.py
sac_assistant/src/sac_assistant/api/: main.py
sac_assistant/src/sac_assistant/config/: agents.yaml  tasks.yaml
sac_assistant/src/sac_assistant/crews/delivery_crew/: delivery_crew.py
sac_assistant/src/sac_assistant/crews/payments_crew/: payments_crew.py
sac_assistant/src/sac_assistant/crews/products_crew/: products_crew.py
sac_assistant/src/sac_assistant/guardrails/: input_guardrail.py
sac_assistant/src/sac_assistant/mock_store/: data.py  router.py
sac_assistant/src/sac_assistant/rag/: ingest.py  retriever.py
sac_assistant/src/sac_assistant/schemas/: specialist_answer.py
sac_assistant/src/sac_assistant/tools/: knowledge_search_tool.py  order_tool.py  payment_tool.py  ticket_tool.py
sac_assistant/tests/: test_input_guardrail.py  test_translation.py
(+11 files in other folders)
