[project]
name = "sac_assistant"
version = "0.1.0"
description = "sac_assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "chromadb>=1.1.1",
    "crewai[google-genai,litellm,tools]==1.15.1",
    "fastapi>=0.138.2",
    "langchain-community<0.4",
    "langchain-google-genai>=4.2.6",
    "langchain-openai>=1.3.3",
    "litellm>=1.90.0",
    "ragas==0.2.15",
    "slowapi>=0.1.10",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
sac_assistant = "sac_assistant.main:run"
run_crew = "sac_assistant.main:run"
train = "sac_assistant.main:train"
replay = "sac_assistant.main:replay"
test = "sac_assistant.main:test"
run_with_trigger = "sac_assistant.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
